
-More reliable cached database upgrades, when upgrading / downgrading an EXISTING installation (see NEW documentation in README.txt)

-Separated PLUGIN upgrade / downgrade checks from the APP upgrade / downgrade system (now that we have PLUGIN versioning)

-Upgraded to the NEW Jupiter Aggregator token search / info / price API endpoints (so Jupiter markets work again now)

-Added number formatting (by chosen locale) to the "My Portfolio" section

-Minor polished interface styling / UX

-Revised DEMO config / resources pages

-------------------------------------------------------------------



-------------------------------------------------------------------
6.01.01

-BUG FIX: Moved USER-SELECTED price charts / news feeds PERSISTENT STORAGE from using cookies (only allowed when cookie usage is selected on the "Settings" page), over to using JavaScript Local Storage, to avoid POTENTIALLY CRASHING App Servers with an excessive header size (helps app servers running other web apps on same web domain / server, OR when tracking MANY assets on the "My Portfolio" page WITH COOKIES ENABLED). This also allows data storage WHILE MAINTAINING PRIVACY (no data sent to the app server), AND immediate auto-save when you change your selected price charts / news feeds (NO NEED TO CLICK AN "UPDATE / SAVE" BUTTON).

-New PER-market error reporting feature, to send comms alerts on X CONSECUTIVE DAYS of market data errors, for any particular market data being requested by the app (can be disabled if desired, in the comms admin section)

-Search feature for the "System Monitoring => App Logs" interface (to only show log lines matching the search query)

-DAILY limit advanced API throttling (for APIs like AlphaVantage FREE tier), for more reliable market data requests

-Stock Overview information, when hovering over the info icon on the My Portfolio page (next to the asset name)

-UX improvements

-------------------------------------------------------------------








